--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,16 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest]
         arch: ['x64', 'x86']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Install CMake
         uses: ssrobins/install-cmake@v1
@@ -49,5 +55,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: DLLs-${{ matrix.os }}-${{ matrix.arch }}
+          name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
           path: build/
