--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest]
-        arch: ['x64', 'x86']
+        arch: ['x64']
         python-version: ['3.10', '3.11', '3.12', '3.13']
 
     steps:
