--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,32 +1,93 @@
-name: Create tagged release and publish to PyPI
+name: Build and Upload DLL & Create tagged release and publish to PyPI
 
 on:
   push:
+    branches:
+      - main
     tags:
       - v*
+  workflow_dispatch:
 
 jobs:
-  release:
+  build_and_upload:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+        arch: ['x64']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install CMake
+        uses: ssrobins/install-cmake@v1
+        with:
+          version: 4.0.1
+
+      - name: Clone Dependencies
+        run: |
+          git clone https://github.com/pybind/pybind11.git
+
+      - name: Configure CMake (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          if [ "$ARCH" = "x64" ]; then
+            cmake -G "Visual Studio 17 2022" -A x64 -S . -B build -DCMAKE_BUILD_TYPE=Release
+          else
+            cmake -G "Visual Studio 17 2022" -A Win32 -S . -B build -DCMAKE_BUILD_TYPE=Release
+          fi
+        shell: bash
+        env:
+          ARCH: ${{ matrix.arch }}
+
+      - name: Configure CMake (Linux)
+        if: runner.os == 'Linux'
+        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+
+      - name: Build with CMake
+        run: cmake --build build --config Release
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
+          path: build/
+
+  release_and_publish:
+    needs: build_and_upload
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Set env
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
+
       - name: Download DLLs and SOs
         uses: actions/download-artifact@v3
         with:
           name: DLLs-*
           path: ./dlls
+
       - name: Create release
         run: npx changelogithub-chinese
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+
       - name: Upload DLLs and SOs to GitHub Release
         uses: softprops/action-gh-release@v1
         with:
@@ -34,26 +95,24 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
-  publish-pypi:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
+      - name: Set up Python for PyPI
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
-      - name: Install dependencies
+
+      - name: Install dependencies for PyPI
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
+
       - name: Copy DLLs and SOs to package directory
         uses: actions/download-artifact@v3
         with:
           name: DLLs-*
           path: ./dlls
-      - name: Build and publish package
+
+      - name: Build and publish package to PyPI
         run: |
-          # 将 DLLs 和 SOs 添加到包中
           python setup.py sdist bdist_wheel
           twine upload dist/*
         env:
