refactor: 把异步改为同步（线程同步不上异步的线程）

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,19 @@ build
 .lh
 converters
 **/__pycache__/
+plugins/
+logs/
+
 server64.exe
 server32.exe
+
 main.py
 start.bat
+
 server_log.txt
 server.cfg
 server64.cfg
 server32.cfg
-plugins/
+
+announce.log
+announce.py
