--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,8 +61,9 @@ jobs:
           path: build/
 
   release_and_publish:
-    needs: build_and_upload
+    # 发布到 GitHub Release 和 PyPI
     runs-on: ubuntu-latest
+    needs: build_and_upload
 
     steps:
       - uses: actions/checkout@v4
@@ -77,21 +78,8 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Download DLLs and SOs
-        uses: actions/download-artifact@v4
-        with:
-          name: DLLs-*
-          path: ./dlls
-
       - name: Create release
-        run: npx changelogithub-chinese
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-
-      - name: Upload DLLs and SOs to GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./dlls/*
+        run: npx @github-tools/changelogithub-chinese
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
@@ -105,12 +93,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
 
-      - name: Copy DLLs and SOs to package directory
-        uses: actions/download-artifact@v4
-        with:
-          name: DLLs-*
-          path: ./dlls
-
       - name: Build and publish package to PyPI
         run: |
           python setup.py sdist bdist_wheel
@@ -118,3 +100,16 @@ jobs:
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+
+      - name: Download DLL Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
+          path: ./dlls
+
+      - name: Upload DLL to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./dlls/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
