--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,53 +17,10 @@ jobs:
         arch: ['x64']
         python-version: ['3.10', '3.11', '3.12', '3.13']
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install CMake
-        uses: ssrobins/install-cmake@v1
-        with:
-          version: 4.0.1
-
-      - name: Clone Dependencies
-        run: |
-          git clone https://github.com/pybind/pybind11.git
-
-      - name: Configure CMake (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          if [ "$ARCH" = "x64" ]; then
-            cmake -G "Visual Studio 17 2022" -A x64 -S . -B build -DCMAKE_BUILD_TYPE=Release
-          else
-            cmake -G "Visual Studio 17 2022" -A Win32 -S . -B build -DCMAKE_BUILD_TYPE=Release
-          fi
-        shell: bash
-        env:
-          ARCH: ${{ matrix.arch }}
-
-      - name: Configure CMake (Linux)
-        if: runner.os == 'Linux'
-        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
-
-      - name: Build with CMake
-        run: cmake --build build --config Release
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
-          path: build/
-
   release_and_publish:
     # 发布到 GitHub Release 和 PyPI
     runs-on: ubuntu-latest
-    needs: build_and_upload
+    #needs: build_and_upload
 
     steps:
       - uses: actions/checkout@v4
@@ -86,7 +43,7 @@ jobs:
       - name: Set up Python for PyPI
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.12
 
       - name: Install dependencies for PyPI
         run: |
@@ -96,13 +53,13 @@ jobs:
       - name: Build and publish package to PyPI
         run: |
           python setup.py sdist bdist_wheel
-          twine upload dist/*
+        #  twine upload dist/*
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
 
       - name: Download DLL Artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
           path: ./dlls
