--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,18 +2,66 @@ name: Build and Upload DLL & Create tagged release and publish to PyPI
 
 on:
   push:
-    branches:
-      - main
     tags:
       - v*
   workflow_dispatch:
 
 jobs:
+  build_and_upload:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+        arch: ['x64']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install CMake
+        uses: ssrobins/install-cmake@v1
+        with:
+          version: 4.0.1
+
+      - name: Clone Dependencies
+        run: |
+          git clone https://github.com/pybind/pybind11.git
+
+      - name: Configure CMake (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          if [ "$ARCH" = "x64" ]; then
+            cmake -G "Visual Studio 17 2022" -A x64 -S . -B build -DCMAKE_BUILD_TYPE=Release
+          else
+            cmake -G "Visual Studio 17 2022" -A Win32 -S . -B build -DCMAKE_BUILD_TYPE=Release
+          fi
+        shell: bash
+        env:
+          ARCH: ${{ matrix.arch }}
+
+      - name: Configure CMake (Linux)
+        if: runner.os == 'Linux'
+        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+
+      - name: Build with CMake
+        run: cmake --build build --config Release
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
+          path: build/
 
   release_and_publish:
     # 发布到 GitHub Release 和 PyPI
     runs-on: ubuntu-latest
-    #needs: build_and_upload
+    needs: build_and_upload
 
     steps:
       - uses: actions/checkout@v4
@@ -29,7 +77,7 @@ jobs:
           node-version: 16.x
 
       - name: Create release
-        run: npx @github-tools/changelogithub-chinese
+        run: npx changelogithub-chinese
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
@@ -46,7 +94,7 @@ jobs:
       - name: Build and publish package to PyPI
         run: |
           python setup.py sdist bdist_wheel
-        #  twine upload dist/*
+          twine upload dist/*
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
