--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,4 +56,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
-          path: build/
+          path: |
+            build/Release/*.dll
+            build/*.so
