--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
-          path: build/
+          path: |
+            build/Release/*.dll
+            build/*.so
 
   release_and_publish:
     # 发布到 GitHub Release 和 PyPI
@@ -71,6 +73,12 @@ jobs:
       - name: Set env
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Download DLL Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: DLLs-*
+          path: ./dlls
 
       - uses: actions/setup-node@v3
         with:
@@ -98,12 +106,6 @@ jobs:
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-
-      - name: Download DLL Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: DLLs-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.python-version }}
-          path: ./dlls
 
       - name: Upload DLL to Release
         uses: softprops/action-gh-release@v1
