--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -142,3 +142,22 @@ jobs:
           files: ./libraries/*
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.HUB_USERNAME }}
+          password: ${{ secrets.HUB_PASSWORD }}
+          
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            atianxiua/vcmp-python:latest
+            atianxiua/vcmp-python:${{ env.RELEASE_VERSION }}
+          platforms: linux/amd64
