--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,9 +1,9 @@
 
-name: Create tagged release
+name: Docker build
 
 on:
   push: 
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build-multiarch:
