--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -6,12 +6,100 @@ on:
     branches: [ master ]
 
 jobs:
+    build_and_upload:
+        runs-on: ${{ matrix.os }}
+        strategy:
+          matrix:
+            os: [windows-latest, ubuntu-latest]
+            arch: ['x64']
+            python-version: ['3.10', '3.11', '3.12', '3.13']
+    
+        steps:
+          - name: Checkout code
+            uses: actions/checkout@v4
+    
+          - name: Set up Python
+            uses: actions/setup-python@v4
+            with:
+              python-version: ${{ matrix.python-version }}
+    
+          - name: Install CMake
+            uses: ssrobins/install-cmake@v1
+            with:
+              version: 4.0.1
+    
+          - name: Clone Dependencies
+            run: |
+              git clone https://github.com/pybind/pybind11.git
+    
+          - name: Configure CMake (Windows)
+            if: runner.os == 'Windows'
+            run: |
+              if [ "$ARCH" = "x64" ]; then
+                cmake -G "Visual Studio 17 2022" -A x64 -S . -B build -DCMAKE_BUILD_TYPE=Release
+              else
+                cmake -G "Visual Studio 17 2022" -A Win32 -S . -B build -DCMAKE_BUILD_TYPE=Release
+              fi
+            shell: bash
+            env:
+              ARCH: ${{ matrix.arch }}
+    
+          - name: Configure CMake (Linux)
+            if: runner.os == 'Linux'
+            run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+    
+          - name: Build with CMake
+            run: cmake --build build --config Release
+    
+          - name: Move DLLs to build (Windows)
+            if: runner.os == 'Windows'
+            run: |
+              mv build/Release/*.dll build/
+    
+          - name: Upload Artifact
+            uses: actions/upload-artifact@v4
+            with:
+              name: DLLs_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
+              path: |
+                build/*.dll
+                build/*.so
+    
+          - name: Save Artifact Names
+            run: echo "artifact_name=DLLs_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
+    
   build-multiarch:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: List Artifacts
+        run: |
+          echo "Artifacts available: ${{ needs.build_and_upload.outputs.artifact_name }}"
+  
+      - name: Download DLL Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ needs.build_and_upload.outputs.artifact_name }} # 动态获取工件名称
+          path: ./dl_libraries
+
+      - name: Move downloaded DLLs to libraries folder and clean empty folders
+        run: |
+          mkdir -p libraries
+
+          cp dl_libraries/**/*.dll libraries/
+          cp dl_libraries/**/*.so libraries/
+
+          rm -rf dl_libraries
+        
+      - name: Copy into vcmp libraries folder
+        run: |
+          mkdir -p ./vcmp/libraries
+          cp -r libraries/* ./vcmp/libraries
+          
+      - name: List Artifacts after download
+        run: ls -a ./libraries
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
