--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -69,6 +69,7 @@ jobs:
     
   build-multiarch:
     runs-on: ubuntu-latest
+    needs: build_and_upload
     steps:
       - uses: actions/checkout@v4
       - name: Set env
