--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -51,53 +51,22 @@ jobs:
       - name: Build with CMake
         run: cmake --build build --config Release
 
-      - name: Move DLLs to build (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          mv build/Release/*.dll build/
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: DLLs_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
-          path: |
-            build/*.dll
-            build/*.so
-
-      - name: Save Artifact Names
-        run: echo "artifact_name=DLLs_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
-    
       - name: debug
         run: |
           strings /usr/lib/x86_64-linux-gnu/libstdc++.so.6 | grep GLIBCXX
 
-  build-multiarch:
-    runs-on: ubuntu-latest
-    needs: build_and_upload
-    steps:
-      - uses: actions/checkout@v4
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-
-      - name: List Artifacts
-        run: |
-          echo "Artifacts available: ${{ needs.build_and_upload.outputs.artifact_name }}"
-  
-      - name: Download DLL Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: ${{ needs.build_and_upload.outputs.artifact_name }} # 动态获取工件名称
-          path: ./dl_libraries
 
       - name: Move downloaded DLLs to libraries folder and clean empty folders
         run: |
           mkdir -p libraries
 
-          cp dl_libraries/**/*.so libraries/
+          cp build/*.so libraries/
 
-          rm -rf dl_libraries
+          rm -rf build
           
-      - name: List Artifacts after download
+      - name: List Artifacts
         run: ls -a ./libraries
 
       - name: Set up Docker Buildx
