--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -47,9 +47,9 @@ jobs:
       - name: Configure CMake (Linux)
         if: runner.os == 'Linux'
         run: |
-          apt-get update && apt-get install -y gcc-12 g++-12 libstdc++6
-          update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 100
-          update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 100
+          sudo apt-get update && apt-get install -y gcc-12 g++-12 libstdc++6
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 100
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 100
           cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
 
       - name: Build with CMake
