--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,3 +1,4 @@
+
 name: Docker build
 
 on:
@@ -6,13 +7,11 @@ on:
 
 jobs:
   build_and_upload:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         arch: ['x64']
         python-version: ['3.13']
-        glibc-version: ['2.31', '2.33', '2.35'] # 支持更多 glibc 版本
-        gcc-version: ['10', '11', '12']         # 支持更多 gcc/glibcxx 版本
     
     steps:
       - name: Checkout code
@@ -28,34 +27,94 @@ jobs:
         with:
           version: 4.0.1
 
-      - name: Install GCC and glibc
+      - name: Clone Dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          
-          # 安装指定版本的 GCC
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-          sudo apt-get update && sudo apt-get install -y gcc-${{ matrix.gcc-version }} g++-${{ matrix.gcc-version }}
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.gcc-version }} 100
-          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ matrix.gcc-version }} 100
-          
-          # 安装指定版本的 glibc
-          wget http://ftp.gnu.org/gnu/libc/glibc-${{ matrix.glibc-version }}.tar.gz
-          tar -xvzf glibc-${{ matrix.glibc-version }}.tar.gz
-          cd glibc-${{ matrix.glibc-version }}
-          mkdir build && cd build
-          ../configure --prefix=/opt/glibc-${{ matrix.glibc-version }}
-          make -j$(nproc)
-          sudo make install
-          
-          # 设置运行时路径
-          sudo ldconfig /opt/glibc-${{ matrix.glibc-version }}/lib
-          export LD_LIBRARY_PATH=/opt/glibc-${{ matrix.glibc-version }}/lib:$LD_LIBRARY_PATH
+          git clone https://github.com/pybind/pybind11.git
 
-      - name: Configure and Build
+      - name: Configure CMake (Windows)
+        if: runner.os == 'Windows'
         run: |
-          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ \
-            -DCMAKE_C_FLAGS="-Wl,--rpath=/opt/glibc-${{ matrix.glibc-version }}/lib -L/opt/glibc-${{ matrix.glibc-version }}/lib" \
-            -DCMAKE_CXX_FLAGS="-Wl,--rpath=/opt/glibc-${{ matrix.glibc-version }}/lib -L/opt/glibc-${{ matrix.glibc-version }}/lib"
-          cmake --build build --config Release
+          if [ "$ARCH" = "x64" ]; then
+            cmake -G "Visual Studio 17 2022" -A x64 -S . -B build -DCMAKE_BUILD_TYPE=Release
+          else
+            cmake -G "Visual Studio 17 2022" -A Win32 -S . -B build -DCMAKE_BUILD_TYPE=Release
+          fi
+        shell: bash
+        env:
+          ARCH: ${{ matrix.arch }}
+
+      - name: Configure CMake (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update 
+          sudo apt-get install -y gcc-12 g++-12 libstdc++6
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 100
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 100
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+          strings /usr/lib/x86_64-linux-gnu/libstdc++.so.6 | grep GLIBCXX
+
+      - name: Build with CMake
+        run: cmake --build build --config Release
+
+      - name: Move DLLs to build (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          mv build/Release/*.dll build/
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: DLLs_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
+          path: |
+            build/*.dll
+            build/*.so
+
+      - name: Save Artifact Names
+        run: echo "artifact_name=DLLs_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
+    
+  build-multiarch:
+    runs-on: ubuntu-latest
+    needs: build_and_upload
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: List Artifacts
+        run: |
+          echo "Artifacts available: ${{ needs.build_and_upload.outputs.artifact_name }}"
+  
+      - name: Download DLL Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ needs.build_and_upload.outputs.artifact_name }} # 动态获取工件名称
+          path: ./dl_libraries
+
+      - name: Move downloaded DLLs to libraries folder and clean empty folders
+        run: |
+          mkdir -p libraries
+
+          cp dl_libraries/**/*.so libraries/
+
+          rm -rf dl_libraries
+          
+      - name: List Artifacts after download
+        run: ls -a ./libraries
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.HUB_USERNAME }}
+          password: ${{ secrets.HUB_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            atianxiua/vcmp-python:next
+          platforms: linux/amd64
