--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@ converters
 **/__pycache__/
 plugins/
 logs/
+scripts/
+store/
 
 server64.exe
 server32.exe
 
-main.py
+*.py
 start.bat
 
 server_log.txt
