--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,11 +108,6 @@ jobs:
         run: |
           mkdir -p ./vcmp/libraries
           cp -r libraries/* ./vcmp/libraries
-    
-      - name: Copy squirrel extend into vcmp folder
-        run: |
-          mkdir -p ./vcmp/squirrel-extend
-          cp -r ./extend/* ./vcmp/squirrel-extend
           
       - name: List Artifacts after download
         run: ls -a ./libraries
@@ -134,12 +129,12 @@ jobs:
       - name: Install dependencies for PyPI
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install pdm
 
       - name: Build and publish package to PyPI
         run: |
-          python setup.py sdist bdist_wheel
-          twine upload dist/*
+          pdm build
+          pdm publish
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
