--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,12 +129,12 @@ jobs:
       - name: Install dependencies for PyPI
         run: |
           python -m pip install --upgrade pip
-          pip install pdm
+          pip install pdm twine
 
       - name: Build and publish package to PyPI
         run: |
           pdm build
-          pdm publish
+          twine upload dist/*
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
