fix: 修复因为 pdm 的包的问题

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,8 +106,8 @@ jobs:
         
       - name: Copy into vcmp libraries folder
         run: |
-          mkdir -p ./vcmp/libraries
-          cp -r libraries/* ./vcmp/libraries
+          mkdir -p ./src/vcmp/libraries
+          cp -r libraries/* ./src/vcmp/libraries
           
       - name: List Artifacts after download
         run: ls -a ./libraries
