--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "vcmp-python-plugin"
-version = "1.2.7-5"
+version = "1.2.7.6"
 description = "Python for VC:MP Server Plugin"
 authors = [
     {name = "tianxiu2b2t", email = "atianxiua@163.com"},
