--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,10 @@
-[workspace]
-resolver = "2"
-members = ["rs_src"]
+[package]
+name = "vcmp-plugin-rs"
+version = "0.1.0"
+edition = "2024"
+
+[dependencies]
+
+[lib]
+path = "rs_src/lib.rs"
+crate-type = ["cdylib"]
