--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -2,6 +2,11 @@
 name = "vcmp-plugin-rs"
 version = "0.1.0"
 edition = "2024"
+authors = [
+    "shenjack <3695888@qq.com>",
+    "tianxiu2b2t <administrator@ttb-network.top>",
+]
+repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"
 
 [dependencies]
 vcmp_bindings = { path = "../vcmp_bindings" }
