add encoding as dep

--- a/crates/vcmp_bindings/Cargo.toml
+++ b/crates/vcmp_bindings/Cargo.toml
@@ -7,3 +7,6 @@ authors = [
     "tianxiu2b2t <administrator@ttb-network.top>",
 ]
 repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"
+
+[dependencies]
+encoding_rs = "0.8.35"
