--- a/crates/vcmp_bindings/Cargo.toml
+++ b/crates/vcmp_bindings/Cargo.toml
@@ -2,4 +2,11 @@
 name = "vcmp_bindings"
 version = "0.1.0"
 edition = "2024"
-authors = ["shenjack <3695888@qq.com>", "tianxiu2b2t <administrator@ttb-network.top>"]
+authors = [
+    "shenjack <3695888@qq.com>",
+    "tianxiu2b2t <administrator@ttb-network.top>",
+]
+repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"
+
+[dependencies]
+encoding_rs = "0.8.35"
