--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,6 +10,8 @@ repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"
 
 [dependencies]
 pyo3 = "0.25.1"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.8.23"
 vcmp_bindings = { path = "../vcmp_bindings" }
 
 [lib]
