--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -9,9 +9,13 @@ authors = [
 repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"
 
 [dependencies]
+arc-bytes = "0.3.5"
+chrono = "0.4.41"
 pyo3 = "0.25.1"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.23"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 vcmp_bindings = { path = "../vcmp_bindings" }
 
 [lib]
