--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,7 +15,7 @@ pyo3 = "0.25.1"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.23"
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["chrono", "fmt", "ansi"] }
 vcmp_bindings = { path = "../vcmp_bindings" }
 
 [lib]
