--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"
 [dependencies]
 arc-bytes = "0.3.5"
 chrono = "0.4.41"
-pyo3 = "0.25.1"
+pyo3 = { version = "0.25.1", features = ["py-clone"]}
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.23"
 tracing = "0.1.41"
