--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"
 arc-bytes = "0.3.5"
 chrono = "0.4.41"
 pyo3 = { version = "0.25.1", features = ["py-clone"]}
+rand = "0.9.1"
 toml = "0.8.23"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
