--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Upload DLL
 on:
   push:
     branches:
-      - main
+      - rwir
   workflow_dispatch:
 
 jobs:
@@ -13,57 +13,29 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-22.04]
         arch: ['x64']
-        python-version: ['3.10', '3.11', '3.12', '3.13']
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions-rs/toolchain@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          toolchain: stable
+      - run: cargo build --release
 
-      - name: Install CMake
-        uses: ssrobins/install-cmake@v1
-        with:
-          version: 4.0.1
-
-      - name: Clone Dependencies
+      - name: Move Libraries to build
         run: |
-          git clone https://github.com/pybind/pybind11.git
+          mv target/release/*.dll build/
+          mv target/release/*.so build/
 
-      - name: Configure CMake (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          if [ "$ARCH" = "x64" ]; then
-            cmake -G "Visual Studio 17 2022" -A x64 -S . -B build -DCMAKE_BUILD_TYPE=Release
-          else
-            cmake -G "Visual Studio 17 2022" -A Win32 -S . -B build -DCMAKE_BUILD_TYPE=Release
-          fi
-        shell: bash
-        env:
-          ARCH: ${{ matrix.arch }}
-
-      - name: Configure CMake (Linux)
-        if: runner.os == 'Linux'
-        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
-
-      - name: Build with CMake
-        run: cmake --build build --config Release
-
-      - name: Move DLLs to build (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          mv build/Release/*.dll build/
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: DLLs_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
+          name: DLLs_${{ matrix.os }}_${{ matrix.arch }}
           path: |
             build/*.dll
             build/*.so
 
       - name: Save Artifact Names
-        run: echo "artifact_name=DLLs_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
+        run: echo "artifact_name=DLLs_${{ matrix.os }}_${{ matrix.arch }}" >> $GITHUB_ENV
