--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,19 +23,23 @@ jobs:
           toolchain: stable
       - run: cargo build --release
 
-      - name: Move Libraries to build
+      - name: Move Libraries to build (Windows)
+        if: runner.os == 'Windows'
         run: |
           mv target/release/*.dll build/
+      - name: Move Libraries to build (Linux)
+        if: runner.os == 'Linux'
+        run: |
           mv target/release/*.so build/
-
+          
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: DLLs_${{ matrix.os }}_${{ matrix.arch }}
+          name: libraries_${{ matrix.os }}_${{ matrix.arch }}
           path: |
             build/*.dll
             build/*.so
 
       - name: Save Artifact Names
-        run: echo "artifact_name=DLLs_${{ matrix.os }}_${{ matrix.arch }}" >> $GITHUB_ENV
+        run: echo "artifact_name=libraries_${{ matrix.os }}_${{ matrix.arch }}" >> $GITHUB_ENV
