--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-22.04]
         arch: ['x64']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
 
     steps:
       - name: Checkout code
@@ -26,10 +27,10 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: libraries_${{ matrix.os }}_${{ matrix.arch }}
+          name: libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
           path: |
             target/release/*.dll
             target/release/*.so
 
       - name: Save Artifact Names
-        run: echo "artifact_name=libraries_${{ matrix.os }}_${{ matrix.arch }}" >> $GITHUB_ENV
+        run: echo "artifact_name=libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
