--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,6 +15,7 @@ toml = "0.8.23"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "fmt", "ansi"] }
+ureq = "3.0.12"
 vcmp_bindings = { path = "../vcmp_bindings" }
 
 [lib]
